--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.8",
+    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "class-transformer": "^0.5.1",
@@ -32,6 +33,8 @@
     "cors": "^2.8.5",
     "graphql": "^16.8.0",
     "helmet": "^7.0.0",
+    "mongodb": "^5.8.0",
+    "mongoose": "^7.4.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
