--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "serverless-plugin-optimize": "^4.2.1-rc.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -58,6 +59,7 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "serverless-offline": "^12.0.4",
+    "serverless-plugin-warmup": "^8.2.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
