--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -16,6 +16,11 @@ jobs:
       - run: serverless plugin install -n serverless-plugin-optimize
       - run: serverless plugin install -n serverless-plugin-warmup
       - run: serverless config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # Configure Environment Development
+      - name: 'Create Development env file'
+        run: |
+          echo "${{ secrets.DEVELOPMENT_ENVIRONMENT }}" > .development.env
+      - run:
       - run: npm ci
       - run: npm run build
       # Deploy on AWS
