--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/apollo": "^12.0.7",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/graphql": "^12.0.8",
