configured deploy testv

--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -17,8 +17,7 @@ jobs:
       - run: serverless plugin install -n serverless-plugin-warmup
       - run: serverless config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       # Configure Environment Development
-      - name: 'Create Development env file'
-        run: |
+      - run: |
           echo "${{ secrets.DEVELOPMENT_ENVIRONMENT }}" > .development.env
       - run:
       - run: npm ci
