--- a/serverless.yaml
+++ b/serverless.yaml
@@ -4,6 +4,7 @@ plugins:
   - serverless-offline
   - serverless-plugin-optimize
   - serverless-plugin-warmup
+  - serverless-dotenv-plugin
 useDotenv: true
 custom:
   serverless-offline:
@@ -25,7 +26,6 @@ provider:
   timeout: 20
   memorySize: 256
   environment:
-    SYSTEM_ID: jdoe
 
 functions:
   main:
