--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -20,6 +20,7 @@ jobs:
       # Configure Environment Development
       - run: |
           echo "${{ secrets.DEVELOPMENT_ENVIRONMENT }}" > .env.development
+      - run: cp .env.development ./dist/.env.development
       - run: npm ci
       - run: npm run build
       # Deploy on AWS
