--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.1",
+    "@aws-sdk/client-cognito-identity-provider": "^3.414.0",
     "@nestjs/apollo": "^12.0.7",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
@@ -29,9 +30,11 @@
     "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@vendia/serverless-express": "^4.10.4",
+    "amazon-cognito-identity-js": "^6.3.6",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1442.0",
     "class-transformer": "^0.5.1",
@@ -39,8 +42,10 @@
     "cors": "^2.8.5",
     "graphql": "^16.8.0",
     "helmet": "^7.0.0",
+    "jwks-rsa": "^3.0.1",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "serverless": "^3.34.0"
