--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
+    "@nestjs/throttler": "^5.1.2",
     "@vendia/serverless-express": "^4.10.4",
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-lambda": "^1.0.7",
