--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,12 +1,10 @@
 name: E2E Tests
 
 on:
-  push:
-    branches:
-      - '**'
-  pull_request:
-    branches:
-      - '**'
+  workflow_run:
+    workflows: ['Build'] # This refers to the workflow name "Build"
+    types:
+      - completed
 
 jobs:
   e2e-test:
