--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bunlar-backend",
   "version": "0.0.1",
-  "description": "",
+  "description": "Backend for the Bunlar project – an online structured debate platform.",
   "author": "İlker Özin",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"  \"e2e/**/*.ts\"",
